[workspace]
members = [
    "neutron-core",
    "neutron-vfs",
    "neutron-engine",
    "neutron-apk",
    "neutron-compat",
    "neutron-ui",
    "neutron-app",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Project Neutron Team"]
license = "GPL-3.0"
rust-version = "1.75"

[workspace.dependencies]
# Core Android
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
log = "0.4"
ndk = "0.9"
ndk-sys = "0.6"

# Async runtime
tokio = { version = "1", features = ["rt", "sync", "io-util", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Filesystem & APK
zip = "2"
memmap2 = "0.9"
walkdir = "2"

# UI
slint = "1.9"

# Crypto
sha2 = "0.10"
rand = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# System
libc = "0.2"
bitflags = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
