[package]
name = "neutron-compat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neutron-core = { path = "../neutron-core" }
neutron-engine = { path = "../neutron-engine" }
libc.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bitflags.workspace = true
memmap2.workspace = true
