[package]
name = "neutron-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libc.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bitflags.workspace = true
memmap2.workspace = true
