[package]
name = "neutron-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neutron-core = { path = "../neutron-core" }
neutron-apk = { path = "../neutron-apk" }
neutron-engine = { path = "../neutron-engine" }
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
# slint-build is used at compile time on CI where ANDROID_HOME is set
# slint-build = "1.9"
